[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
url = https://github.com/wizardsoftheweb/wotw-highlighter#readme
description = Formats code as an editor-esque (Sublime, VS Code) block
long_description = file: README.rst
license = ISC
install_requires =
    pygments
requires =
    pygments

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=wotw_highlighter --color=yes
