[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
url = https://github.com/wizardsoftheweb/wotw-highlighter#readme
description = Formats code as an editor-esque (Sublime, VS Code) block
long_description = file: README.rst
license = ISC

[options]
install_requires =
    premailer
    pygments
    pytest-runner
tests_require =
    coverage
    mock
    pytest
    pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=wotw_highlighter --color=yes

[aliases]
test=pytest
